--- a/packages/amplication-design-system/src/style/css-variables.scss
+++ b/packages/amplication-design-system/src/style/css-variables.scss
@@ -72,6 +72,9 @@
   --double-spacing: 24px;
   --triple-spacing: 36px;
   --form-field-spacing: 16px;
+
+  --user-badge-spacing: 6px;
+
   --form-field-long: 320px;
   --form-field-normal: 200px;
   --grid-row-gap: 8px;
