--- a/packages/amplication-client/src/Components/BuildSelectorItem.scss
+++ b/packages/amplication-client/src/Components/BuildSelectorItem.scss
@@ -17,7 +17,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     font-weight: 400;
-    font-size: 12px;
+    @include regular-12; 
     justify-content: space-between;
   }
 
