--- a/packages/amplication-client/src/Workspaces/WorkspaceHeader.scss
+++ b/packages/amplication-client/src/Workspaces/WorkspaceHeader.scss
@@ -113,6 +113,9 @@ $modal-menu-top: 30px;
     &__link {
       @include regular-12();
       color: var(--black80);
+      &:hover {
+        color: var(--black100);
+      }
     }
   }
   &__vertical_border {
