--- a/packages/amplication-client/src/Layout/PageContent.scss
+++ b/packages/amplication-client/src/Layout/PageContent.scss
@@ -20,6 +20,7 @@ $tabs-width: 300px;
     border-radius: var(--default-border-radius);
     border: $border-black10;
     padding: var(--large-spacing);
+    margin: var(--large-spacing) 0;
     box-sizing: border-box;
     overflow: auto;
 
