--- a/packages/amplication-data-service-generator/src/admin/static/src/login.scss
+++ b/packages/amplication-data-service-generator/src/admin/static/src/login.scss
@@ -1,5 +1,5 @@
 :root {
-  --surface: var(--black2);
+  --surface: #15192c; /*dark: black100 */
   --white: #15192c; /*dark: black100 */
 
   --black100: #ffffff; /*dark: white */
