--- a/packages/amplication-client/src/Resource/ResourceMenu.scss
+++ b/packages/amplication-client/src/Resource/ResourceMenu.scss
@@ -1,6 +1,6 @@
 @import "../style/index.scss";
 // This style is a general style for any left side menu
 
-.left-menu {
+.resource-menu {
   border-right: $border-black5;
 }
