--- a/packages/amplication-client/src/VersionControl/CommitListItem.scss
+++ b/packages/amplication-client/src/VersionControl/CommitListItem.scss
@@ -15,7 +15,7 @@ $metadata-width: 150px;
     padding: 0 var(--default-spacing-small);
 
     &__message {
-      @include body2;
+      @include regular-12;
       color: var(--black100);
     }
 
