--- a/packages/amplication-client/src/Layout/PageContent.scss
+++ b/packages/amplication-client/src/Layout/PageContent.scss
@@ -11,7 +11,7 @@ $tabs-width: 300px;
   box-sizing: border-box;
   flex: 1;
   overflow: hidden;
-  height: calc(100vh - var(--header-height));
+  height: 100%;
 
   &__tabs {
     @include scrollbars(10px, var(--black60), transparent);
