--- a/packages/amplication-client/src/Workspaces/WorkspaceFooter.scss
+++ b/packages/amplication-client/src/Workspaces/WorkspaceFooter.scss
@@ -7,4 +7,5 @@
   padding: 0px var(--large-spacing);
   background: var(--black10);
   height: var(--footer-height);
+  min-height: var(--footer-height);
 }
