--- a/packages/amplication-client/src/Components/CommitSelector.scss
+++ b/packages/amplication-client/src/Components/CommitSelector.scss
@@ -1,13 +1,13 @@
 @import "../style/index.scss";
 
-.build-selector {
+.commit-selector {
   &__label-title {
     padding-bottom: 4px;
     color: var(--black80);
   }
 
   &__hour {
-    @include regular-10; 
+    @include regular-10;
     color: var(--black80);
   }
 
