style(client):selector items

--- a/packages/amplication-client/src/Components/CommitSelector.scss
+++ b/packages/amplication-client/src/Components/CommitSelector.scss
@@ -2,7 +2,7 @@
 
 .commit-selector {
   &__label-title {
-    padding-bottom: 4px;
+    padding-bottom: var(--icon-spacing);
     color: var(--black80);
   }
 
