pr => remove comment from pageContent css

--- a/packages/amplication-client/src/Layout/PageContent.scss
+++ b/packages/amplication-client/src/Layout/PageContent.scss
@@ -6,7 +6,7 @@ $tabs-width: 300px;
   display: flex;
   flex-direction: row;
   align-items: stretch;
-  // padding: 0 var(--large-spacing);
+  padding: 0 var(--large-spacing);
   background: var(--page-content-background);
   box-sizing: border-box;
   flex: 1;
