pr => refactor on resource type

--- a/packages/amplication-client/src/Resource/git/ServiceConfigurationGitSettings.scss
+++ b/packages/amplication-client/src/Resource/git/ServiceConfigurationGitSettings.scss
@@ -29,7 +29,7 @@
     align-items: flex-start;
     margin: 8px 0;
     border-radius: 8px;
-    transition-timing-function: ease-in(0.35); //not working from here
+    transition-timing-function: ease-in(0.35); //todo: need to complete 
   }
 
   &__gitSettingsFromProject {
