fix descripsion css

--- a/packages/amplication-client/src/Resource/ResourceForm.scss
+++ b/packages/amplication-client/src/Resource/ResourceForm.scss
@@ -2,11 +2,17 @@
 
 .resource-form {
   &__header {
-    @include flexFullRowWithSpacing;
+    display: flex;
+    flex-direction: column;
     margin-bottom: var(--large-spacing);
     h3 {
       margin: 0;
+      margin-bottom: var(--default-spacing); 
       @include title-18();
+    }
+    h5{
+      @include regular-14;
+      margin: 0;
     }
   }
   h1 {
