--- a/packages/amplication-client/src/Workspaces/WorkspaceFooter.scss
+++ b/packages/amplication-client/src/Workspaces/WorkspaceFooter.scss
@@ -4,8 +4,35 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-between;
   padding: 0px var(--large-spacing);
   background: var(--black10);
   height: var(--footer-height);
   min-height: var(--footer-height);
+
+  &__right,
+  &__left {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  &__right {
+    .truncated-id {
+      @include semiBold;
+      color: var(--black100);
+    }
+
+    .clickable-id {
+      color: var(--black80);
+      margin-left: var(--default-spacing-small);
+      a {
+        color: var(--black100);
+      }
+    }
+  }
+
+  &__github-icon {
+    margin-right: var(--icon-spacing);
+  }
 }
