--- a/packages/amplication-design-system/src/components/UserAvatar/UserAvatar.scss
+++ b/packages/amplication-design-system/src/components/UserAvatar/UserAvatar.scss
@@ -16,7 +16,7 @@
     text-align: center;
     width: var(--small-menu-item-width);
     color: var(--static-white);
-    font-size: var(--title2-font-size);
+    font-size: var(--text-field-label-font-size);
     text-transform: capitalize;
   }
 }
