fix(client): chevron_down icon position not permanent

--- a/packages/amplication-client/src/Resource/git/GitActions/ExistingConnectionsMenu.scss
+++ b/packages/amplication-client/src/Resource/git/GitActions/ExistingConnectionsMenu.scss
@@ -9,7 +9,7 @@
     box-sizing: border-box;
     padding: 0px 12px;
     gap: 8px;
-    width: 248px;
+    display:inline-flex;
     height: 28px;
     background: var(--black5);
     border: $border-black20;
