--- a/packages/amplication-client/src/style/dark-css-variables.css
+++ b/packages/amplication-client/src/style/dark-css-variables.css
@@ -40,6 +40,8 @@
   --image-drop-excel: url("../assets/images/mono/drop-excel-dark.svg");
   --image-my-resources: url("../assets/images/mono/my-resources-dark.svg");
   --image-generating: url("../assets/images/mono/generating-dark.svg");
+  --image-create-service-wizard : url("../assets/images/mono/service-wizard-create.svg");
+
 
   --diffViewerBackground: var(--white);
   --diffViewerColor: var(--black100);
