--- a/packages/amplication-client/src/Resource/create-resource/CreateServiceWizard.scss
+++ b/packages/amplication-client/src/Resource/create-resource/CreateServiceWizard.scss
@@ -4,13 +4,18 @@
 $max-width: 700px;
 
 .create-service-wizard {
-  display: flex;
   height: 100%;
+  display: flex;
   flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  align-items: flex-start;
+  position: absolute;
 
   &__splitWrapper {
     display: flex;
     height: 100%;
+    width: 1800px;
   }
 
   &__left {
@@ -27,7 +32,7 @@ $max-width: 700px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: var(--surface);
+    background: var(--white);
   }
   &__description {
     display: flex;
@@ -38,6 +43,8 @@ $max-width: 700px;
 
     .circle-badge i {
       color: var(--black5);
+      font-size: 14px; 
+      
     }
   }
 
@@ -81,43 +88,48 @@ $max-width: 700px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    position: relative;
     height: 100%;
-    margin: auto;
-    color: var(--black100);
-    background: var(--black2);
+    width: 1800px;
+    background: var(--white);
+
+    &__message_title_container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
 
     &__title {
-      @include headline1;
+      font-weight: 600;
+      font-size: 24px;
       text-align: center;
-      padding: 0 var(--default-spacing);
+      color: var(--black100);
     }
 
     &__message {
-      @include sectionTitle;
+      font-size: 18px;
+      line-height: 28px;
       color: var(--black80);
-      margin-top: var(--double-spacing);
+      margin-top: 4px;
+      color: var(--black100);
     }
 
     &__tagline {
-      @include body2;
-      color: var(--black100);
-      max-width: $max-width;
+      //@include body2;
+      font-size: 10px;
+      line-height: 15px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       text-align: center;
-      max-width: math.div($max-width, 1.5);
+      color: var(--black80);
     }
 
     .svg-theme-image {
       width: 200px;
       height: 200px;
       margin: 50px;
-    }
-    &__loader {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 100%;
-      margin-bottom: var(--double-spacing);
     }
   }
 }
