feat(client) fix commit selector in code view page

--- a/packages/amplication-client/src/Components/CommitSelectorItem.scss
+++ b/packages/amplication-client/src/Components/CommitSelectorItem.scss
@@ -6,6 +6,6 @@
   margin-right: auto;
   &__title {
     @include regular-12;
-    margin: 0 var(--icon-spacing);
+    margin: 0 var(--user-badge-spacing);
   }
 }
