fix(client) use var for icon font size

--- a/packages/amplication-client/src/VersionControl/BuildStatusIcons.scss
+++ b/packages/amplication-client/src/VersionControl/BuildStatusIcons.scss
@@ -9,7 +9,7 @@
     .amp-icon {
       color: var(--black80);
       margin-left: var(--default-spacing);
-      font-size: 16px;
+      font-size: var(--icon-font-size);
     }
   }
 }
