--- a/packages/amplication-client/src/Workspaces/ResourceListItem.scss
+++ b/packages/amplication-client/src/Workspaces/ResourceListItem.scss
@@ -39,7 +39,7 @@
       color: var(--black100);
     }
     &__not-yet {
-      color: --var(--black80);
+      color: var(--black80);
     }
   }
 }
