--- a/packages/amplication-client/src/VersionControl/LastCommit.scss
+++ b/packages/amplication-client/src/VersionControl/LastCommit.scss
@@ -40,6 +40,7 @@
 
   .clickable-id {
     color: var(--black80);
+    margin-right: var(--icon-spacing);
     a {
       color: var(--black100);
     }
