--- a/packages/amplication-client/src/style/mixin.scss
+++ b/packages/amplication-client/src/style/mixin.scss
@@ -373,8 +373,7 @@ $active-indicator-width: 4px;
 }
 
 @mixin font-base {
-  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Roboto",
     "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -430,7 +429,7 @@ $active-indicator-width: 4px;
 
 @mixin bold-14 {
   @include font-base();
-  font-weight: 500;
+  font-weight: 600;
   font-size: 14px;
   line-height: 22px;
   color: #f5f6fa;
@@ -446,7 +445,7 @@ $active-indicator-width: 4px;
 
 @mixin bold-12 {
   @include font-base();
-  font-weight: 500;
+  font-weight: 600;
   font-size: 12px;
   line-height: 18px;
   color: #f5f6fa;
