fix(client) work in progress

--- a/packages/amplication-client/src/VersionControl/Commit.scss
+++ b/packages/amplication-client/src/VersionControl/Commit.scss
@@ -5,6 +5,7 @@
   margin-bottom: var(--default-spacing);
 
   .amp-button {
+    @include regular-12;
     margin-top: var(--large-spacing);
     width: 100%;
   }
