--- a/packages/amplication-client/src/VersionControl/LastCommit.scss
+++ b/packages/amplication-client/src/VersionControl/LastCommit.scss
@@ -23,7 +23,9 @@
   }
 
   &__divider {
-    border: $border-black5;
+    border: none;
+    background-color: var(--black10);
+    height: 1px;
     margin: 0;
   }
 
@@ -38,6 +40,7 @@
   }
 
   .clickable-id {
+    @include regular-12;
     color: var(--black80);
     margin-right: var(--icon-spacing);
     a {
