changed layout padding

--- a/packages/amplication-client/src/Workspaces/WorkspaceLayout.scss
+++ b/packages/amplication-client/src/Workspaces/WorkspaceLayout.scss
@@ -10,14 +10,11 @@
   &__page_content {
     display: flex;
     flex: 1;
-    flex-direction: row;
-    flex-grow: 1;
-    height: 100%;
     overflow: hidden;
   }
 
   &__main_content {
-    flex-grow: 1;
+    flex: 1;
   }
 
   &__changes_menu {
