--- a/packages/amplication-client/src/Layout/PageContent.scss
+++ b/packages/amplication-client/src/Layout/PageContent.scss
@@ -2,16 +2,15 @@
 
 $side-min-width: 500px;
 $tabs-width: 300px;
+
 .amp-page-content {
   display: flex;
-  flex-direction: row;
-  align-items: stretch;
-  padding: 0 var(--large-spacing);
+  flex: 1;
+  gap: var(--large-spacing);
+  padding: var(--large-spacing);
   background: var(--page-content-background);
   box-sizing: border-box;
-  flex: 1;
   overflow: hidden;
-  height: 100%;
 
   &__tabs {
     @include scrollbars(10px, var(--black60), transparent);
@@ -20,7 +19,6 @@ $tabs-width: 300px;
     border-radius: var(--default-border-radius);
     border: $border-black10;
     padding: var(--large-spacing);
-    margin: var(--large-spacing) 0;
     box-sizing: border-box;
     overflow: auto;
 
@@ -33,20 +31,16 @@ $tabs-width: 300px;
     @include scrollbars(10px, var(--black60), transparent);
     flex: 1;
     overflow: auto;
-    height: 100%;
-    flex: 1;
-    padding: var(--large-spacing);
     position: relative;
     box-sizing: border-box;
-    height: 100%;
 
     @media only screen and (max-width: $page-content-min-width) {
       min-width: calc(#{$page-content-min-width} - var(--menu-width));
     }
   }
+
   .log-container {
     flex: 1;
-    width: 50%;
     min-width: $side-min-width;
   }
 }
