fix: No border radius on buttons in permissions tab

--- a/packages/amplication-design-system/src/components/MultiStateToggle/MultiStateToggle.scss
+++ b/packages/amplication-design-system/src/components/MultiStateToggle/MultiStateToggle.scss
@@ -32,13 +32,13 @@
       }
 
       &:first-child {
-        border-radius: var(--form-permission-type-radius) 0 0
+        border-radius: var(--form-permission-type-radius) 0px 0px
           var(--form-permission-type-radius);
       }
 
       &:last-child {
-        border-radius: 0 var(--form-permission-type-radius)
-          var(--form-permission-type-radius) 0;
+        border-radius: 0px var(--form-permission-type-radius)
+          var(--form-permission-type-radius) 0px;
       }
 
       &--selected,
