fix: add pagination for getOrganisationRepos

--- a/packages/amplication-client/src/Resource/git/dialogs/GitRepos/GitRepos.scss
+++ b/packages/amplication-client/src/Resource/git/dialogs/GitRepos/GitRepos.scss
@@ -19,6 +19,10 @@
       padding-bottom: var(--default-spacing-small);
     }
   }
+  &__pagination {
+    display: flex;
+    margin-bottom: 20px;
+  }
 }
 
 .amp-dialog.select-repo-dialog {
