--- a/packages/amplication-client/src/VersionControl/LastCommit.scss
+++ b/packages/amplication-client/src/VersionControl/LastCommit.scss
@@ -14,6 +14,7 @@
   &__status {
     display: flex;
     align-items: center;
+    margin: var(--large-spacing) 0;
   }
 
   .build-status-icons__status {
