--- a/packages/amplication-client/src/Layout/PageContent.scss
+++ b/packages/amplication-client/src/Layout/PageContent.scss
@@ -7,6 +7,7 @@ $tabs-width: 300px;
   flex-direction: row;
   align-items: stretch;
   padding: 0 var(--large-spacing);
+  padding-right: 0;
   background: var(--page-content-background);
   box-sizing: border-box;
   flex: 1;
@@ -14,13 +15,13 @@ $tabs-width: 300px;
   height: 100%;
 
   &__tabs {
-    @include scrollbars(10px, var(--black60), transparent);
+    @include scrollbars(16px, var(--black60), transparent);
     width: $tabs-width;
     background: var(--page-content-tab-background);
     border-radius: var(--default-border-radius);
     border: $border-black10;
     padding: var(--large-spacing);
-    margin: var(--large-spacing) 0;
+    padding-right: 0;
     box-sizing: border-box;
     overflow: auto;
 
@@ -30,7 +31,7 @@ $tabs-width: 300px;
   }
 
   &__main {
-    @include scrollbars(10px, var(--black60), transparent);
+    @include scrollbars(16px, var(--black60), transparent);
     flex: 1;
     overflow: auto;
     height: 100%;
