--- a/packages/amplication-client/src/style/mixin.scss
+++ b/packages/amplication-client/src/style/mixin.scss
@@ -228,6 +228,11 @@ $bullet-size: 6px;
   $foreground-color,
   $background-color: mix($foreground-color, white, 50%)
 ) {
+
+  & {
+    scrollbar-gutter: stable;
+  }
+
   // For Google Chrome
   &::-webkit-scrollbar {
     width: $size;
@@ -240,14 +245,21 @@ $bullet-size: 6px;
   }
 
   &::-webkit-scrollbar-thumb {
-    background: $foreground-color;
+    background-color: rgba($foreground-color, .5);
     border-radius: $size * 0.5;
+    background-clip: padding-box;
+    border: $size/3 solid transparent;
+  }
+  
+  &::-webkit-scrollbar-track {
+    background-color: $background-color;
+    margin: -$size/3;
   }
 
-  &::-webkit-scrollbar-track {
-    background: $background-color;
-    border-radius: $size * 0.5;
-    margin: 5px;
+  &:hover {
+    &::-webkit-scrollbar-thumb {
+      background-color: $foreground-color;
+    }
   }
 
   // For Internet Explorer
