--- a/packages/amplication-client/src/Plugins/PluginsCatalogItem.scss
+++ b/packages/amplication-client/src/Plugins/PluginsCatalogItem.scss
@@ -1,5 +1,9 @@
 @import "../style/index.scss";
 
+$logo-size: 44px;
+$logo-background: #dcb21a;
+$order-badge-size: 14px;
+
 .plugins-catalog-item {
   margin: 0;
   margin-bottom: var(--default-spacing);
@@ -7,6 +11,7 @@
   &__row {
     @include flexFullRowWithSpacing;
     margin-bottom: var(--default-spacing);
+    align-items: flex-start;
 
     &:last-child {
       margin-bottom: 0;
@@ -15,10 +20,18 @@
   &__title {
     @include body1;
     color: var(--black100);
+    margin-top: var(--default-spacing-small);
   }
   &__description {
     @include body2;
     color: var(--black80);
+  }
+
+  &__logo {
+    width: $logo-size;
+    height: $logo-size;
+    background-color: $logo-background;
+    border-radius: var(--default-border-radius);
   }
 
   &__order {
@@ -31,8 +44,8 @@
       background-color: var(--black2);
       padding: var(--icon-spacing);
       border-radius: var(--small-border-radius);
-      width: 14px;
-      height: 14px;
+      width: $order-badge-size;
+      height: $order-badge-size;
     }
   }
 }
