fix(client): inner tab circle

--- a/packages/amplication-client/src/Layout/InnerTabLink.scss
+++ b/packages/amplication-client/src/Layout/InnerTabLink.scss
@@ -29,4 +29,10 @@
   &.active {
     @include active-link;
   }
+
+  &__inner-span {
+    width: 100%;
+    display: flex;
+    align-items: center;
+  }
 }
