--- a/packages/amplication-client/src/ServiceConnections/ServiceConnectionsList.scss
+++ b/packages/amplication-client/src/ServiceConnections/ServiceConnectionsList.scss
@@ -16,6 +16,12 @@
       &:last-child {
         margin-bottom: 0;
       }
+      &__inner {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+      }
     }
   }
 
