refactor: rename the ServiceMessageBrokerConnections block to ServiceTopics

--- a/packages/amplication-client/src/ServiceConnections/ServiceTopics.scss
+++ b/packages/amplication-client/src/ServiceConnections/ServiceTopics.scss
@@ -1,6 +1,6 @@
 @import "../style/index.scss";
 
-.service-message-broker-connection {
+.service-topics {
   &__row {
     @include flexFullRowWithSpacing;
     margin-bottom: var(--default-spacing);
