--- a/packages/amplication-client/src/Layout/PageContent.scss
+++ b/packages/amplication-client/src/Layout/PageContent.scss
@@ -14,6 +14,8 @@ $tabs-width: 300px;
 
   &__tabs {
     @include scrollbars(16px, var(--black60), transparent);
+    display: flex;
+    flex-direction: column;
     width: $tabs-width;
     background: var(--page-content-tab-background);
     border-radius: var(--default-border-radius);
