--- a/packages/amplication-client/src/Project/ProjectSideBar.scss
+++ b/packages/amplication-client/src/Project/ProjectSideBar.scss
@@ -1,13 +1,20 @@
 @import "../style/index.scss";
 
 .project-sidebar {
-  @include flexColumn;
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 
   &__project-wrapper {
-    flex-grow: 1;
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    
+    .amp-button {
+      justify-content: flex-start;
+    }
   }
+
   &__label {
     @include regular-12;
     margin-top: 0;
@@ -16,7 +23,9 @@
   }
 
   &__divider {
-    border: $border-black5;
-    width: 99%;
+    height: 1px;
+    background-color: var(--black5);
+    margin: var(--large-spacing) 0;
+    border: none;
   }
 }
