adjusted add new project button to design

--- a/packages/amplication-client/src/Project/ProjectList.scss
+++ b/packages/amplication-client/src/Project/ProjectList.scss
@@ -7,4 +7,10 @@
   &__items {
     flex: 1;
   }
+
+  .amp-button {
+    .amp-button__icon {
+      margin: 0 var(--default-spacing-small);
+    }
+  }
 }
