--- a/packages/amplication-design-system/src/components/CircularProgress/CircularProgress.scss
+++ b/packages/amplication-design-system/src/components/CircularProgress/CircularProgress.scss
@@ -5,4 +5,12 @@
   .MuiCircularProgress-root {
     color: var(--primary);
   }
+
+  &--center-to-parent {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+  }
 }
