removed redundant styles from pending changes, change resource list header padding, gap between resources, label font size, removed gap after last element in resource list, added gap between settings

--- a/packages/amplication-client/src/Entity/EntityList.scss
+++ b/packages/amplication-client/src/Entity/EntityList.scss
@@ -9,8 +9,15 @@
       width: var(--form-field-long);
     }
   }
+
   &__title {
     @include body2;
     margin-bottom: var(--large-spacing);
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    gap: var(--large-spacing);
   }
 }
