--- a/packages/amplication-client/src/Project/WorkspaceSettingsNavigation.scss
+++ b/packages/amplication-client/src/Project/WorkspaceSettingsNavigation.scss
@@ -1,5 +1,5 @@
 @import "../style/index.scss";
 
+//Leaving scss file for consistency with other components
 .workspace-settings-navigation {
-  margin-top: auto; 
 }
