--- a/packages/amplication-client/src/Workspaces/ResourceList.scss
+++ b/packages/amplication-client/src/Workspaces/ResourceList.scss
@@ -2,22 +2,34 @@
 $empty-state-image-size: 120px;
 
 .resource-list {
-  & {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-  }
+  
+  display: flex;
+  flex-direction: column;
+
   &__header {
     @include flexFullRowWithSpacing;
-    margin-bottom: var(--large-spacing);
 
     .search-field {
       width: var(--form-field-long);
     }
   }
+
+  &__separator {
+    margin: var(--large-spacing) 0;
+    height: 1px;
+    border: none;
+    background-color: var(--black5);
+  }
+  
   &__title {
     @include body2;
-    margin-bottom: var(--large-spacing);
+    margin-bottom: var(--default-spacing-small);
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    gap: var(--large-spacing);
   }
 
   &__empty-state {
@@ -25,12 +37,14 @@ $empty-state-image-size: 120px;
       width: 250px;
       height: 250px;
     }
+
     margin-bottom: 50px;
     display: flex;
     height: 100%;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    
     img {
       height: $empty-state-image-size;
     }
